--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-tsrouter-app"
-    />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - event-hive-ui</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="en" class="dark" about="EventHive">
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <title>EventHive | Scale Your Events</title>
+
+    <meta name="description"
+          content="A robust, concurrency-safe event management platform built for scale. Book tickets, host events, and manage bookings with ease."/>
+
+    <meta name="theme-color" content="#020617"/>
+
+    <link rel="icon" href="/favicon.ico"/>
+    <link rel="apple-touch-icon" href="/logo192.png"/>
+    <link rel="manifest" href="/manifest.json"/>
+</head>
+
+<body class="bg-slate-950 text-slate-100 antialiased">
+<div id="app"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
